<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_main_layout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:background="@color/green">

        <!-- Absolute ProgressBar -->
        <ProgressBar
            android:id="@+id/progress_bar_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_profile_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/users_profile_default_string"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email_string"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_email_default_string"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="invisible"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="invisible"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/save_new_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:visibility="invisible"
                android:textSize="11sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/change_profile_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChangeProfilePictureString"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:visibility="invisible"
                app:backgroundTint="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />


    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_main_layout">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/edit_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/add_icon" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>