<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconImageView"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name_with_space"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleAppName"
            android:layout_marginStart="30dp"
            android:text="@string/signUpString"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/message_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupText"
            android:layout_marginStart="30dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="invisible"
            android:textColor="@color/red" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_box"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHintSignUp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstNameInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastNameInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:boxBackgroundColor="#F5F5F5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHintSignUp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_below="@id/passwordInputLayout"
            android:text="@string/signUpString"
            android:visibility="visible"
            app:backgroundTint="@color/green" />

        <ProgressBar
            android:id="@+id/progress_bar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/lastNameInputLayout"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>