<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeString"
        android:textStyle="bold"
        android:textSize="45sp"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/LoginText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

<!--    <TextView-->
<!--        android:id="@+id/titleAppName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/iconImageView"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="@string/app_name_with_space"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="30sp"-->
<!--        android:textColor="@color/gray" />-->

<!--    <TextView-->
<!--        android:id="@+id/LoginText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/titleAppName"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:text="@string/loginString"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="30sp"-->
<!--        android:textColor="@color/black" />-->

    <TextView
        android:id="@+id/message_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconImageView"
        android:layout_marginStart="30dp"
        android:text=""
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="invisible"
        android:textColor="@color/red" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_box"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundColor="#F5F5F5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHintSignUp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInputLayout"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxBackgroundColor="#F5F5F5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHintSignUp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/passwordInputLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/green"
            android:text="@string/loginString"
            android:layout_marginEnd="8dp" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signUpString"
            android:textColor="@color/white"
            app:backgroundTint="@color/black" />

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/emailInputLayout"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>